[package]
edition = "2018"
name = "fping_exporter"
version = "0.1.0-beta"

[features]
docker = []

[dependencies]
anyhow = "1"
clap = "3.0"
humantime = "2.1"
lazy_static = "1.4"
log = {version = "0.4", features = ["release_max_level_info"]}
nix = "0.21"
pretty_env_logger = "0.4"
prometheus = {version = "0.13", features = ["process"]}
regex = "1"
semver = "1.0"
thiserror = "1"
tokio = {version = "1", features = ["full"]}
warp = "0.3"
